--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "boxicons": "^2.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
